# aws-api-gateway-local

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  api-gateway.yml  docker-compose.yml  pyproject.toml  routes.json
aws/: main.tf
aws/lambdas/: get_data.py  login.py  post_data.py  register.py  zip-lambdas.sh
aws/lambdas/common/: __init__.py  cognito.py  exceptions.py  lambda_helpers.py  s3.py
aws_api_gateway_local/: __init__.py  __main__.py
